--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 .navbar {
     background-color: #003580; /* Dark blue */
-    padding: 10px 20px;
+    padding: 30px 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -19,6 +19,7 @@
     top: -100px; /* Initially hidden above the navbar */
     left: 0;
     right: 0;
+   
     background-color: #003580;
     display: flex;
     align-items: center;
@@ -32,14 +33,16 @@
 }
 
 .search-form.hidden {
-    top: -200px; /* Hidden state */
+    top: -100px; /* Hidden state */
 }
 
 .search-form.visible {
-    top: 50px; /* Visible state just below the navbar */
+    top: 65px; /* Visible state just below the navbar */
 }
 
 .search-form input {
+    width: 100%;
+    max-width: 400px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -47,6 +50,39 @@
     font-size: 14px;
 }
 
+#searchInput {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.autocomplete-suggestions {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: white;
+    border: 1px solid #ddd;
+    border-top: none;
+    border-radius: 0 0 4px 4px;
+    max-height: 200px;
+    overflow-y: auto;
+    z-index: 1000;
+}
+
+.suggestion-item {
+    padding: 8px 12px;
+    cursor: pointer;
+}
+
+.suggestion-item:hover {
+    background-color: #f5f5f5;
+}
+
+.hidden {
+    display: none;
+}
 
 .search-form button:hover {
     background-color: #009973;
